# pyspice-lite

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
examples/: ac_sweep.py  bsim_nmos.py  rc_transient.py  ring_oscillator.py  voltage_divider.py
src/pyspice_lite/: __init__.py  analysis.py  circuit.py  elements.py  netlist.py  plot.py  simulator.py
tests/: test_netlist.py  test_simulator.py
